--- a/.env.keycloak.example
+++ b/.env.keycloak.example
@@ -9,8 +9,7 @@ QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY=true
 KC_HTTP_ENABLED=true
 KC_HTTP_PORT=8080
 KC_HOSTNAME_STRICT=true
-KC_HOSTNAME_STRICT_BACKCHANNEL=true
-KC_HOSTNAME=${{RAILWAY_PUBLIC_DOMAIN}}
+KC_HOSTNAME=https://${{RAILWAY_PUBLIC_DOMAIN}}
 
 KC_PROXY=edge
 PROXY_ADDRESS_FORWARDING=true
