--- a/.env.keycloak.example
+++ b/.env.keycloak.example
@@ -11,7 +11,7 @@ KC_HTTP_PORT=8080
 KC_HOSTNAME_STRICT=true
 KC_HOSTNAME=https://${{RAILWAY_PUBLIC_DOMAIN}}
 
-KC_PROXY=edge
+KC_PROXY_HEADERS=xforwarded
 PROXY_ADDRESS_FORWARDING=true
 
 KC_DB=postgres
